--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -1,6 +1,8 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4a.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4a.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4a.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4a.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4a.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4a.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4a.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4a.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809002.md#1" target="_blank">武汉肺炎证实人传人 冠状病毒之父：2要点防范</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809002.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/wuhan-novel-coronavirus-laimingzhao-320x200.jpg" align ="left"></a>武汉肺炎病毒已证实能够人传人，当下应如何有效防堵疫情扩散？中研院院士、被台湾学界誉为“冠状病毒之父”的赖明诏接受大纪元专访表示，冠状病毒容易突变，导致危险性增加，做好隔离、重视戴口罩是预防关键。赖明诏表示，如果病毒进入人传人阶段，可能引起大爆发。冠状病毒属于RNA病毒，多来自于蝙蝠，RNA病毒极易发生基因突变。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 2:03 PM	</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809463.md#1" target="_blank">太空人在太空中为地球上的小孩读床边故事</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809463.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/iss053e210425-320x200.jpg" align ="left"></a>为人父母者在孩子睡觉前读床边故事给他们听，有助于增进他们的文学、词汇和想像能力。但并非每个家长都愿意或有时间这么做。现在，在教育学家和太空人的协助之下，您的小孩也能听到太空人在太空中为他们所读的床边故事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 4:08 PM	</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809527.md#1" target="_blank">【AUSTPRO珀斯房地产专栏】2020年房地产出售策略</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809527.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/c8c3d8b616889cb3f298e5efa931414a-150x120.jpg" align ="left"></a>根据RP Data最新数据显示，珀斯与其它首府城市一样，在2020年房价有微长的迹象。如果你有意在今年年出售房地产，以下4个策略与你分享，希望你能够找到最好的买家，卖出最高价位。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 3:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809328.md#1" target="_blank">研究：孕期饮食脂肪较高影响孩子未来健康</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809328.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/02/1501112248472483-150x120.jpg" align ="left"></a>悉尼大学研究人员称，母亲在孕期摄入的脂肪可能会影响孩子未来的健康，含较高脂肪的饮食对孩子的生长发育，以及后天罹患多种疾病的风险息息相关。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 2:11 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809002.md#1" target="_blank">武汉肺炎证实人传人 冠状病毒之父：2要点防范</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809002.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/wuhan-novel-coronavirus-laimingzhao-150x120.jpg" align ="left"></a>武汉肺炎病毒已证实能够人传人，当下应如何有效防堵疫情扩散？中研院院士、被台湾学界誉为“冠状病毒之父”的赖明诏接受大纪元专访表示，冠状病毒容易突变，导致危险性增加，做好隔离、重视戴口罩是预防关键。赖明诏表示，如果病毒进入人传人阶段，可能引起大爆发。冠状病毒属于RNA病毒，多来自于蝙蝠，RNA病毒极易发生基因突变。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 2:03 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1" target="_blank">【持续更新】武汉肺炎速扩9省市 已死4人</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1097066394-150x120.jpg" align ="left"></a>中国武汉去年12月爆发不明肺炎，今年1月8日确定为新型冠状病毒，世界卫生组织13日将此病毒定名为“2019新型冠状病毒”（2019－nCoV）。目前出现2例死亡病例，该新型冠状病毒已有扩散趋势，泰国和日本近日先后确诊个案，患者皆到过武汉。但在中国仍只有武汉有疫情消息。本文将持续更新关于武汉肺炎疫情的最新进展。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 1:42 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802852.md#1" target="_blank">在笔尖上雕刻“台北101”超迷你作品令人赞叹</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802852.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/334035b8de2223cb7501361b3bb8d9ee-150x120.jpg" align ="left"></a>微雕艺术的呈现总是令人惊叹，而一位日本创作家Shiloi更是别出心裁，他在铅笔心上面发展出他独特的创意，他将台北的地标101大楼和法国艾菲尔铁塔都摆到铅笔心上面去了，我们来看看他令人赞叹的作品。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 1:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802899.md#1" target="_blank">鞋子后方“小尾巴”原来有4种用途 你用过吗？</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802899.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/956cf27af501b780062a278f777c9edc-150x120.jpg" align ="left"></a>许多运动鞋、板鞋后方都有一个“小尾巴”，可别以为它只是装饰用的；其实“小尾巴”是大有用处的，设计师细心设计让我们更便利使用，我们来看看它要如何使用呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 1:15 PM			</td></tr>
@@ -30,18 +32,8 @@
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802999.md#1" target="_blank">日本特色书店（2）茑屋书店公寓</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802999.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/7bb2d0c9ab7783a8335b21ef825b1b37-150x120.jpg" align ="left"></a>TSUTAYA BOOK APARTMENT由创立“茑屋书店”的ＣＣＣ集团（Culture Convenience Club）的TSUTAYA开设的新式设施，就位在新宿站旁边，是一个24小时营业的“放松空间”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 1:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803003.md#1" target="_blank">地毯应定期清洁 避免常见8误区</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803003.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15ead7e966a6f01a_ttl7dayOvO_shutterstock_1430294426-150x120.jpg" align ="left"></a>坊间流传许多清洁地毯的小技巧。事实上这些技巧中，有许多反而会把情况越弄越糟。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 10:58 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803359.md#1" target="_blank">牙龈红肿发炎怎么办？中医荐1种食物和3味中药</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803359.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Inflammation-of-the-gums-food_697827745-150x120.jpg" align ="left"></a>牙龈肿痛、发炎，不只是口腔的问题，以中医观点来讲，这跟脏腑经络有关系。上牙龈属于足阳明胃经，下牙龈属于手阳明大肠经，若上下牙龈皆痛，通常跟肾虚有关。实火属于急性发炎，症状往往来得快，且持续疼痛。虚火属于慢性发炎，牙龈肿痛时好时坏， 迁延日久。牙龈发炎，中医如何治疗？改善牙龈发炎的1种食物和3味中药：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 6:57 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11799177.md#1" target="_blank">醋清肠排毒解便秘！这3个时间喝更好</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11799177.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/vinegar-benefit-200118-150x120.jpg" align ="left"></a>食醋有清肠排毒、改善便秘等功效。一天三个时间喝醋，对身体有益。但必须知道的是，喝醋有一些注意事项。《本草纲目》记载：“醋能消肿、散水汽、杀邪毒、理诸药。”醋中含有多种氨基酸和有机酸，对人体非常有益。不同时间喝醋，效果也各异。食醋分为化学合成醋、混和醋和酿造醋。醋并非人都适合，合理方法饮用，才能达到预期的效果。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 4:37 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11790375.md#1" target="_blank">工作繁忙脑袋卡关 2诀窍保持高超工作效率</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11790375.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/05/120718151848100445-150x120.jpg" align ="left"></a>活用“以两成付出，创造八成价值”的帕累托法则（Pareto principle）。只要仔细观察，将发现两成时间创造八成价值的情形，其实相当之多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 10:56 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789610.md#1" target="_blank">辩证疗法快速减鼾治鼾</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789610.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/6994f0d239cfac976c71974d7c4d3163-150x120.jpg" align ="left"></a> 临床上根据疾病的主要表现和特征，来诊断疾病的过程则称为“辨病”。“病”和“证”的确定，都是以症状为依据的。一病可以出现多证，一证可见于多病之中。因此，临床上必须把“辩证”与“辨病”相结合，这样诊断就会准确。 中医历代医家的辩证医学，是通过长期临床实践，逐渐发展而成，辩证领域很广，举例来说，有：“病因”辩证、“气血津液.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 6:22 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803462.md#1" target="_blank">汽车维修问与答：开车时方向盘为何抖动</a><br></h3>汽车维修问与答
-
-读者Helena问：Dear?Mr. Lee,
-
-You are great in helping my husband Dennis to solve the car problem last year and hope you can help me with my car this ti.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 6:44 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803441.md#1" target="_blank">了解日本汽车的制造技术</a><br></h3>在全世界，众所周知的事实是美国人都喜欢自己国家的汽车。几十年来，美国人绝大多数都选择了美国的三大汽车制造商的汽车，通用汽车、福特和克莱斯勒来满足他们的需求。
-
-&nbsp;
-
-福特汽车通过将汽车生产装配线自动化彻底改变了汽车制造业。这种技术适应于大量生产同一种类型的车辆（甚至颜色最好也要相同）。这样可以使工人尽.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 6:41 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809592.md#1" target="_blank">珀斯AMP大楼锁定长期租户</a><br></h3>安保资本（AMP Capital）所拥有的圣乔治大道140号（140 St Georges Terrace）守住了4层租户，使该写字楼空置率下降至1%以下。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 3:45 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809519.md#1" target="_blank">珀斯Spudshed家族企业利润增两倍</a><br></h3>作为西澳最著名家族企业之一，Spudshed控股公司利润增加了两倍多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 3:30 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809492.md#1" target="_blank">珀斯Applecross15层公寓获批</a><br></h3>最近，一个位于Applecross的大型公寓综合开发项目-Canning Beach Promenade获批，联合开发评估小组声称此项目为Canning Bridge活动中心的开发项目树立了典范。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 3:26 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1<br><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/crlhi259/djy/blob/master/gb/news2008.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008.htm">http://www.epochtimes.com/gb/news2008.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
